--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
                 <span id="cart-total">$0.00</span>
             </div>
             <div class="cart-buttons">
-                <button class="btn btn-primary">Checkout</button>
+                <a href="checkout.html" class="btn btn-primary">Checkout</a>
                 <button class="btn btn-secondary">Continue Browsing</button>
             </div>
         </div>
